# model_manager

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  model_manager.py  next.config.js  package-lock.json  pyproject.toml  requirements.txt  server.py  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
app/: layout.tsx  page.tsx
app/protected/: page.tsx
components/: Header.tsx
configs/: bert-eqa.yaml  bert-tc.yaml  huggingface-tc-bert-base-cased-202403291810.yaml  llama7b.yaml
example_configs/: bert-eqa.yaml  bert-tc.yaml  llama7b.yaml  train-bert.yaml
scripts/: setup_role.sh
src/: config.py  console.py  main.py  schemas.py  session.py  yaml.py
src/huggingface/: __init__.py  hf_hub_api.py
src/sagemaker/: create_model.py  fine_tune_model.py  query_endpoint.py  resources.py  search_jumpstart_models.py
src/sagemaker_helpers/: __init__.py  create_sagemaker_model.py  delete_sagemaker_model.py  query_sagemaker_endpoint.py  sagemaker_resources.py  search_sagemaker_jumpstart_models.py
src/schemas/: __init__.py  deployment.py  model.py  query.py  secret.py  training.py
src/supabase/: __init__.py  secret.py
src/utils/: aws_utils.py  crypto.py  format.py  model_utils.py  rich_utils.py
tests/: test_openai_proxy.py
utils/supabase/: client.ts  middleware.ts  server.ts
